[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 479.946, 1.1469, 0, 0, 0, 0, 479.946, 1.9878, 0, 0, 0, 0, 480.529, 718.532, 0, 0, 0, 0, 2.92889, 718.532, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node2D"]

[node name="Main" type="Node" parent="."]
script = ExtResource( 1 )
Mot = ExtResource( 3 )

[node name="Player" parent="Main" instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="Main"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Main"]
one_shot = true

[node name="StartTimer" type="Timer" parent="Main"]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="Main"]
position = Vector2( 250, 450 )

[node name="MobPath" type="Path2D" parent="Main"]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="Main/MobPath"]
rotation = 0.00238964

[node name="HUD" parent="Main" instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="Main"]
stream = ExtResource( 6 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="Main"]
stream = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 482.0
margin_bottom = 717.0
color = Color( 0.443137, 0.258824, 0.686275, 1 )

[connection signal="hit" from="Main/Player" to="Main" method="game_over"]
[connection signal="timeout" from="Main/MobTimer" to="Main" method="_on_MobTimer_timeout"]
[connection signal="timeout" from="Main/ScoreTimer" to="Main" method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="Main/StartTimer" to="Main" method="_on_StartTimer_timeout"]
[connection signal="start_game" from="Main/HUD" to="Main" method="new_game"]
